Ignore redefined-outer-name

--- a/.pylintrc
+++ b/.pylintrc
@@ -141,7 +141,8 @@ disable=print-statement,
         comprehension-escape,
         too-many-arguments,
         invalid-name,
-        attribute-defined-outside-init
+        attribute-defined-outside-init,
+        redefined-outer-name
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
