--- a/deep_recommend/recommend/ctr/ctr_models.yml
+++ b/deep_recommend/recommend/ctr/ctr_models.yml
@@ -1,4 +1,6 @@
 models:
+  fm:
+    yaml: deep_recommend/recommend/ctr/fm/fm.yml
   deepfm:
     yaml: deep_recommend/recommend/ctr/deepfm/deepfm.yml
   dcn:
