--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_install:
   - pip install pytest-cov==2.4.0
   - pip install tensorflow==$TENSORFLOW_VERSION
   - pip install codecov
+  - export PYTHONPATH=$PYTHONPATH:$pwd
 
 install:
   - pip install -r requirements.txt
