--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pytest --cov=deep_recommenders tests/$MODULE
+  - pytest --cov=deep_recommenders/$MODULE tests/$MODULE
 
 notifications:
   email: wangyao.sr@gmail.com
