--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -8,29 +8,29 @@ jobs:
       fail-fast: true
       matrix:
         python: [3.7, 3.8]
-        tensorflow: [1.15, 2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6]
+        tensorflow: ["1.15", "2.0", "2.1", "2.2", "2.3", "2.4", "2.5", "2.6"]
         module: [estimator, keras]
         experimental: [false]
         include:
-          - tensorflow: 1.15
+          - tensorflow: "1.15"
             module: keras
             experimental: true
-          - tensorflow: 2.0
+          - tensorflow: "2.0"
             module: keras
             experimental: true
-          - tensorflow: 2.1
+          - tensorflow: "2.1"
             module: keras
             experimental: true
-          - tensorflow: 2.2
+          - tensorflow: "2.2"
             module: keras
             experimental: true
         exclude:
           - python: 3.8
-            tensorflow: 1.15
+            tensorflow: "1.15"
           - python: 3.8
-            tensorflow: 2.0
+            tensorflow: "2.0"
           - python: 3.8
-            tensorflow: 2.1
+            tensorflow: "2.1"
     steps:
       - name: Install dependencies
         run: |
