--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -32,6 +32,8 @@ jobs:
           - python: 3.8
             tensorflow: "2.1"
     steps:
+      - name: Use python docker image
+        uses: docker://python:${{ matrix.python }}
       - name: Install dependencies
         run: |
           pip install pytest-cov==2.4.0
