Fix CI github actions

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -42,6 +42,7 @@ jobs:
           pip install codecov
           pip install tensorflow==${{ matrix.tensorflow }}
           pip install -r requirements.txt
+        working-directory: ./
       - name: Set python path environment variables
         run: export PYTHONPATH=$PYTHONPATH:$pwd
       - name: Testing
