--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -32,18 +32,20 @@ jobs:
           - python: 3.8
             tensorflow: "2.1"
     steps:
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-          architecture: "x64"
       - name: Install dependencies
         run: |
-          pip install pytest-cov==2.4.0
-          pip install codecov
+          python -m pip install --upgrade pip
           pip install tensorflow==${{ matrix.tensorflow }}
           pip install -r requirements.txt
-        working-directory: ./
       - name: Set python path environment variables
         run: export PYTHONPATH=$PYTHONPATH:$pwd
       - name: Testing
-        run: pytest --cov=deep_recommenders/${{ matrix.module }} tests/${{ matrix.module }}
+        run: |
+          pip install pytest-cov==2.4.0
+          pip install codecov
+          pytest --cov=deep_recommenders/${{ matrix.module }} tests/${{ matrix.module }}
