--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -12,16 +12,36 @@ jobs:
         module: [estimator, keras]
         experimental: [false]
         include:
-          - tensorflow: "1.15"
+          - python: 3.7
+            tensorflow: "1.15"
             module: keras
             experimental: true
-          - tensorflow: "2.0"
+          - python: 3.7
+            tensorflow: "2.0"
             module: keras
             experimental: true
-          - tensorflow: "2.1"
+          - python: 3.7
+            tensorflow: "2.1"
             module: keras
             experimental: true
-          - tensorflow: "2.2"
+          - python: 3.7
+            tensorflow: "2.2"
+            module: keras
+            experimental: true
+          - python: 3.8
+            tensorflow: "1.15"
+            module: keras
+            experimental: true
+          - python: 3.8
+            tensorflow: "2.0"
+            module: keras
+            experimental: true
+          - python: 3.8
+            tensorflow: "2.1"
+            module: keras
+            experimental: true
+          - python: 3.8
+            tensorflow: "2.2"
             module: keras
             experimental: true
         exclude:
