--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -3,47 +3,12 @@ on: [push]
 jobs:
   Testing:
     runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: true
       matrix:
         python: [3.7, 3.8]
         tensorflow: ["1.15", "2.0", "2.1", "2.2", "2.3", "2.4", "2.5", "2.6"]
         module: [estimator, keras]
-        experimental: [false]
-        include:
-          - python: 3.7
-            tensorflow: "1.15"
-            module: keras
-            experimental: true
-          - python: 3.7
-            tensorflow: "2.0"
-            module: keras
-            experimental: true
-          - python: 3.7
-            tensorflow: "2.1"
-            module: keras
-            experimental: true
-          - python: 3.7
-            tensorflow: "2.2"
-            module: keras
-            experimental: true
-          - python: 3.8
-            tensorflow: "1.15"
-            module: keras
-            experimental: true
-          - python: 3.8
-            tensorflow: "2.0"
-            module: keras
-            experimental: true
-          - python: 3.8
-            tensorflow: "2.1"
-            module: keras
-            experimental: true
-          - python: 3.8
-            tensorflow: "2.2"
-            module: keras
-            experimental: true
         exclude:
           - python: 3.8
             tensorflow: "1.15"
@@ -51,6 +16,14 @@ jobs:
             tensorflow: "2.0"
           - python: 3.8
             tensorflow: "2.1"
+          - module: keras
+            tensorlfow: "1.15"
+          - module: keras
+            tensorlfow: "2.0"
+          - module: keras
+            tensorlfow: "2.1"
+          - module: keras
+            tensorlfow: "2.2"
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
