--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -24,6 +24,9 @@ jobs:
             tensorflow: "2.1"
           - module: keras
             tensorflow: "2.2"
+          - python: 3.7
+            module: estimator
+            tensorflow: "2.6"
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
